--- a/index.html
+++ b/index.html
@@ -26,7 +26,96 @@
         </div>
     </section>
 
+    <section class="banner-part">
+        <div class="banner-image-text flex-center">
+            <div class="container flex-center">
+                <h1>Hi.</h1>
+            </div>
+        </div>
+    </section>
 
+    <section class="welcome">
+        <div class="container">
+            <div class="welcome-msg flex-center">
+                <h1>Welcome</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe totam ipsa veniam neque ad,
+                    accusantium animi nisi molestiae hic quo eius iusto quod iure quasi officiis debitis voluptates.
+                    Illo aspernatur ea nesciunt dolorem molestiae repudiandae veritatis aperiam voluptatem officia
+                    eaque? Assumenda inventore doloribus optio sed, fugit in aliquam recusandae cumque. Lorem ipsum
+                    dolor sit amet consectetur adipisicing elit. Saepe ipsum nihil laborum tempora! Voluptatum hic
+                    dolorem tempore voluptatem labore explicabo libero sit, sequi iusto assumenda voluptate, molestiae
+                    animi, fugiat modi nesciunt. Consequuntur eum suscipit at, repellendus et quasi quo nam, corporis,
+                    ducimus cum accusantium quaerat? Mollitia rerum natus praesentium! Ea!</p>
+                <img src="images/coding-pic.svg" alt="coding pic">
+            </div>
+        </div>
+    </section>
+
+    <section class="about">
+        <div class="container about-grids">
+            <div class="about-text flex-center">
+                <h1>About</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe totam ipsa veniam neque ad,
+                    accusantium animi nisi molestiae hic quo eius iusto quod iure quasi officiis debitis voluptates.
+                    Illo aspernatur ea nesciunt dolorem molestiae repudiandae veritatis aperiam voluptatem officia
+                    eaque? Assumenda inventore doloribus optio sed, fugit in aliquam recusandae cumque. Lorem ipsum
+                    dolor sit amet consectetur adipisicing elit. Saepe ipsum nihil laborum tempora! Voluptatum hic
+                    dolorem tempore voluptatem labore explicabo libero sit, sequi iusto assumenda voluptate, molestiae
+                    animi, fugiat modi nesciunt. Consequuntur eum suscipit at, repellendus et quasi quo nam, corporis,
+                    ducimus cum accusantium quaerat? Mollitia rerum natus praesentium! Ea!</p>
+
+                <img src="images/hello.svg" alt="hello">
+
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe totam ipsa veniam neque ad,
+                    accusantium animi nisi molestiae hic quo eius iusto quod iure quasi officiis debitis voluptates.
+                    Illo aspernatur ea nesciunt dolorem molestiae repudiandae veritatis aperiam voluptatem officia
+                    eaque? Assumenda inventore doloribus optio sed, fugit in aliquam recusandae cumque. Lorem ipsum
+                    dolor sit amet consectetur adipisicing elit. Saepe ipsum nihil laborum tempora! Voluptatum hic
+                    dolorem tempore voluptatem labore explicabo libero sit, sequi iusto assumenda voluptate, molestiae
+                    animi, fugiat modi nesciunt. Consequuntur eum suscipit at, repellendus et quasi quo nam, corporis,
+                    ducimus cum accusantium quaerat? Mollitia rerum natus praesentium! Ea!</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="resume">
+        <div class="container flex-center">
+            <h1>Resume</h1>
+            <div class="boxes resume-grids">
+                <div class="box1 box">
+                    <h1>Hawa</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati pariatur itaque esse tenetur
+                        earum commodi culpa praesentium provident corrupti vero?</p>
+                </div>
+                <div class="box2 box">
+                    <h1>Hawa</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati pariatur itaque esse tenetur
+                        earum commodi culpa praesentium provident corrupti vero?</p>
+                </div>
+                <div class="box3 box">
+                    <h1>Hawa</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati pariatur itaque esse tenetur
+                        earum commodi culpa praesentium provident corrupti vero?</p>
+                </div>
+
+                <div class="box1 box">
+                    <h1>Hawa</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati pariatur itaque esse tenetur
+                        earum commodi culpa praesentium provident corrupti vero?</p>
+                </div>
+                <div class="box2 box">
+                    <h1>Hawa</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati pariatur itaque esse tenetur
+                        earum commodi culpa praesentium provident corrupti vero?</p>
+                </div>
+                <div class="box3 box">
+                    <h1>Hawa</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati pariatur itaque esse tenetur
+                        earum commodi culpa praesentium provident corrupti vero?</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
 </body>
 
