--- a/index.html
+++ b/index.html
@@ -154,7 +154,17 @@
 
     <footer>
         <div class="footer-content">
-            <h1>&copy;Aprameya Neopane</h1>
+
+            <div class="container flex-center">
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#resume">Resume</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+                <h1>&copy;Aprameya Neopane</h1>
+
+            </div>
 
         </div>
     </footer>
