--- a/index.html
+++ b/index.html
@@ -14,9 +14,22 @@
 
     <section class="nav-bar" id="home">
         <div class="container">
+
+            <div class="hamburger" onclick="menu()">
+                <div class="line line1">
+
+                </div>
+                <div class="line line2">
+
+                </div>
+                <div class="line line3">
+
+                </div>
+            </div>
+
             <div class="navigation">
                 <nav>
-                    <ul>
+                    <ul id="myTopnav">
                         <li><a href="#home">Home</a></li>
                         <li><a href="#about">About</a></li>
                         <li><a href="#resume">Resume</a></li>
@@ -65,7 +78,9 @@
                     animi, fugiat modi nesciunt. Consequuntur eum suscipit at, repellendus et quasi quo nam, corporis,
                     ducimus cum accusantium quaerat? Mollitia rerum natus praesentium! Ea!</p>
 
-                <img src="images/hello.svg" alt="hello">
+                <div class="container">
+                    <img src="images/hello.svg" alt="hello">
+                </div>
 
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe totam ipsa veniam neque ad,
                     accusantium animi nisi molestiae hic quo eius iusto quod iure quasi officiis debitis voluptates.
