--- a/index.html
+++ b/index.html
@@ -16,27 +16,29 @@
         <div class="container">
 
             <div class="hamburger" onclick="menu()">
-                <div class="line line1">
 
-                </div>
-                <div class="line line2">
-
-                </div>
-                <div class="line line3">
-
-                </div>
             </div>
 
             <div class="navigation">
-                <nav>
-                    <ul id="myTopnav">
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#resume">Resume</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                    </ul>
-                </nav>
+                <div class="hamburger" onclick="menu()">
+                    <div class="line line1">
+
+                    </div>
+                    <div class="line line2">
+
+                    </div>
+                    <div class="line line3">
+
+                    </div>
+                </div>
+                <ul class="flex nav-links" id="myTopnav">
+                    <li><a href="#home" onclick="menu()">Home</a></li>
+                    <li><a href="#about" onclick="menu()">About</a></li>
+                    <li><a href="#resume" onclick="menu()">Resume</a></li>
+                    <li><a href="#contact" onclick="menu()">Contact</a></li>
+                </ul>
             </div>
+
         </div>
     </section>
 
